[gd_scene load_steps=35 format=2]

[ext_resource path="res://Eklentiler/Font/Atarian/SF Atarian System Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Kodlar/HUD.gd" type="Script" id=2]
[ext_resource path="res://Eklentiler/Font/Atarian/SF Atarian System Bold Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Eklentiler/Tileset/Objects/Kunai.png" type="Texture" id=4]
[ext_resource path="res://Eklentiler/Player/Idle__007.png" type="Texture" id=5]
[ext_resource path="res://Eklentiler/Player/Idle__009.png" type="Texture" id=6]
[ext_resource path="res://Eklentiler/Player/Idle__004.png" type="Texture" id=7]
[ext_resource path="res://Eklentiler/Player/Idle__000.png" type="Texture" id=8]
[ext_resource path="res://Eklentiler/Player/Idle__006.png" type="Texture" id=9]
[ext_resource path="res://Eklentiler/Player/Idle__008.png" type="Texture" id=10]
[ext_resource path="res://Eklentiler/Player/Idle__001.png" type="Texture" id=11]
[ext_resource path="res://Eklentiler/Player/Idle__002.png" type="Texture" id=12]
[ext_resource path="res://Eklentiler/Player/Idle__003.png" type="Texture" id=13]
[ext_resource path="res://Eklentiler/Player/Idle__005.png" type="Texture" id=14]
[ext_resource path="res://Eklentiler/Tileset/Objects/Saw.png" type="Texture" id=15]
[ext_resource path="res://Eklentiler/Tileset/Objects/Switch (1).png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.254902, 0.988235, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=4]
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 10

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Eklentiler/Font/Atarian/SF Atarian System Bold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=18]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Ä°nfo" type="Label" parent="."]
margin_left = -1.33484
margin_right = 658.665
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "KILL:                                          SCORE:       DUTY:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Duty_Label" type="Label" parent="."]
margin_left = 576.0
margin_right = 621.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Bar" type="ProgressBar" parent="."]
margin_left = 82.2286
margin_top = 42.8959
margin_right = 382.229
margin_bottom = 110.896
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kill_Label" type="Label" parent="."]
margin_left = 5.04164
margin_top = 26.6612
margin_right = 57.0416
margin_bottom = 155.661
custom_fonts/font = SubResource( 7 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Label" type="Label" parent="."]
margin_left = 404.228
margin_top = 27.0218
margin_right = 456.228
margin_bottom = 156.022
custom_fonts/font = SubResource( 8 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message_Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -64.5
margin_right = 130.5
margin_bottom = 64.5
custom_fonts/font = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="menu1" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.462745, 0.145098, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="menu1"]
anchor_left = 0.492
anchor_top = 0.469
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.808
margin_top = -248.192
margin_right = 63.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 10 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_button" type="Button" parent="menu1"]
anchor_left = 0.5
anchor_top = 0.396
anchor_right = 0.5
anchor_bottom = 0.396
margin_left = -112.0
margin_top = -96.128
margin_right = 115.0
margin_bottom = -25.128
custom_fonts/font = SubResource( 11 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_button" type="Button" parent="menu1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -80.0
margin_right = 81.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 12 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="informations" type="Button" parent="menu1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 16.0
margin_right = 139.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 13 )
text = "informations"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="Button" parent="menu1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 112.0
margin_right = 47.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 14 )
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saw" type="Sprite" parent="menu1"]
position = Vector2( 1040, 160 )
rotation = 6.28319
scale = Vector2( 0.746499, 0.743767 )
texture = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="menu1"]
position = Vector2( 208, 536 )
frames = SubResource( 15 )
frame = 4
playing = true

[node name="Kunai" type="Sprite" parent="menu1"]
position = Vector2( 464, 128 )
texture = ExtResource( 4 )

[node name="Switch (1)" type="Sprite" parent="menu1"]
position = Vector2( 904, 640 )
texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="menu1"]
root_node = NodePath("../Saw")
"anims/Yeni Animasyon" = SubResource( 16 )

[node name="menu2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.462745, 0.145098, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_button" type="Button" parent="menu2"]
anchor_left = 0.492
anchor_top = 0.469
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.808
margin_top = -248.192
margin_right = 82.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 10 )
text = "resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_button" type="Button" parent="menu2"]
anchor_left = 0.5
anchor_top = 0.396
anchor_right = 0.5
anchor_bottom = 0.396
margin_left = -112.0
margin_top = -96.128
margin_right = 115.0
margin_bottom = -25.128
custom_fonts/font = SubResource( 11 )
text = "save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_button" type="Button" parent="menu2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 24.0
margin_right = 89.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 12 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="menu2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -72.0
margin_right = 139.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 13 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_button" type="Button" parent="menu2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 112.0
margin_right = 47.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 14 )
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saw" type="Sprite" parent="menu2"]
position = Vector2( 1032, 160 )
rotation = 6.28319
scale = Vector2( 0.746499, 0.743767 )
texture = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="menu2"]
position = Vector2( 208, 536 )
frames = SubResource( 15 )
frame = 1
playing = true

[node name="Kunai" type="Sprite" parent="menu2"]
position = Vector2( 464, 128 )
texture = ExtResource( 4 )

[node name="Switch (1)" type="Sprite" parent="menu2"]
position = Vector2( 904, 640 )
texture = ExtResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="menu2"]
root_node = NodePath("../Saw")
"anims/Yeni Animasyon" = SubResource( 17 )

[node name="menu3" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.462745, 0.145098, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK_button" type="Button" parent="menu3"]
anchor_left = 0.492
anchor_top = 0.469
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.808
margin_top = -248.192
margin_right = 82.0
margin_bottom = -201.0
custom_fonts/font = SubResource( 10 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="menu3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.5
margin_top = -32.5
margin_right = 145.5
margin_bottom = 32.5
custom_fonts/font = SubResource( 18 )
text = "NIJNIJNIJNDN"

[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="menu1/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="menu1/load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="menu1/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="menu1/informations" to="." method="_on_informations_pressed"]
[connection signal="pressed" from="menu1/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="menu2/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="menu2/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="menu2/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="menu2/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="menu2/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="menu3/OK_button" to="." method="_on_OK_button_pressed"]
